# dot

./: .editorconfig  .gitignore  .shellcheckrc  CLAUDE.md  LICENSE.md  Makefile  README.md  bootstrap  install  pyproject.toml  setup.py
.air/plans/: brew-sync-on-dot.plan.md
.github/workflows/: lint.yml
brew/: Brewfile  Brewfile.lock.json
git/: gitconfig.symlink
iterm/: com.googlecode.iterm2.plist
jam/: __init__.py  cli.py
rel/anthropic/: env.zsh.example
rel/brew/: Brewfile  Brewfile.lock.json  install.sh  sync.sh
rel/git/: aliases.zsh  gitconfig.local.symlink  gitconfig.local.symlink.example  gitconfig.symlink
rel/jam/: path.zsh
rel/javascript/: install.sh
rel/os/: install.sh  path.zsh  reset.sh
rel/python/: install.sh  path.zsh
rel/ssh/: config.example
rel/vim/: vimrc.symlink
rel/zsh/: aliases.zsh  completion.zsh  config.zsh  fpath.zsh  prompt.zsh  window.zsh  zshrc.symlink
run/: _common.sh  install  lint  os-update  setup
zsh/: aliases.zsh  zshrc.symlink
