[tool.poetry]
name = "jam"
version = "0.1.0"
description = "Dotfiles manager transformed into a Python project"
authors = ["Fred Montet <fredmontet@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
typer = "^0.7.0"

[tool.poetry.scripts]
jam = "jam.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"